# dandi-search-response-ui

./: .gitignore  Dockerfile  Dockerfile.dev  Dockerrun.aws.json  README.md  docker-compose.locust.yml  docker-compose.yml  envfile.txt  pyproject.toml  requirements.txt
.github/workflows/: deploy_new_version.yml  push-docker-image-to-ecr.yml
data/: qdrant_points_emb.json
notebooks/: true_ranks_response_jotform.ipynb
rest/: app.py  constants.py  envfile.txt  get_secrets.py  run.py  script.py  utils.py
rest/clients/: aws_s3.py  dandi.py  embedding.py  firebase.py  llama2.py  openai.py  qdrant.py
scripts/: classify_query.ipynb  download.sh  get_qdrant_points.ipynb  get_qdrant_points.py  test_quantitative_search.ipynb  update_qdrant_points.ipynb
static/: index.html  styles.css
static/scripts/: scan_dandi.js  tabswitch.js  upload_s3.js  ux_features.js  viewresize.js
stress-test/: locustfile.py
tests/: test_scan.py
