[tool.poetry]
name = "dandi-search-response-ui"
version = "0.1.0"
description = ""
authors = ["Jai Amin <jamin30@mit.edu>", "Aaron Kanzer <akanzer@mit.edu>"]

[tool.poetry.dependencies]
python = "3.11.7"
uvicorn = "0.23.2"
fastapi = "0.104.0"
jinja2 = "3.1.2"
langchain = "0.0.316"
dandi = "0.58.0"
qdrant-client = "1.6.3"
openai = "0.28.1"
llama-cpp-python = "0.2.18"
uuid = "1.30"
tiktoken = "0.5.1"
sentence_transformers = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"